# confirmasaurus

./: .dockerignore  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  README.md  conftest.py  environment-ci.yml  environment-dev.yml  environment.yml  install.sh  pyproject.toml  renovate.json  requirements-coiled.txt  requirements-dev.txt  requirements.txt  run.py  setup.cfg  test_secrets.enc.env
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/bigdev/: Dockerfile  build  devcontainer.json
.devcontainer/clouddev/: devcontainer.json
.devcontainer/docker/: Dockerfile  devcontainer.json
.devcontainer/smalldev/: Dockerfile  build  copy_default.sh  devcontainer.json
.github/workflows/: docker-publish.yml  e2e.yml  e2e_runner.py  lint.yml  pull-from-imprint.yml  test.yml
.obsidian/: workspace
anarchy/: .gitignore  22_07_09.md  22_07_11.md  Anarchy.md  BazelBuildFixes.md  GitSubtree.md  INLA-AppxError.md  README.md  Sampling.md  VSCodeTips.md  cond_expect.ipynb  conditional_inla.ipynb  dumb_hessian_bound.ipynb  generalized_inla.ipynb  iOS.md  padded_interp.ipynb  r_inla.ipynb  sample_inla.ipynb  scratch.ipynb  skew_normal.ipynb  skew_normal_autodiff.ipynb
anarchy/.obsidian/: app.json  appearance.json  starred.json
anarchy/jax_inv/: jax_inv.md
anarchy/skew_normal/: analytical.ipynb  analytical2.ipynb  skew_normal.ipynb  skew_normal_autodiff.ipynb
anarchy/vs_rinla/: .gitignore  inlaw.ipynb  r_inla.ipynb  scratch.ipynb
cloud/: README.md  connect.sh  docker-compose.yml  iampolicy.json  init.sh  init_amzn_linux.sh  install_awscli  main.tf  policy.json  push_image  push_image.sh  set_docker_context.sh  setup_remotedev.sh  variables.tf
cloud/batch_cdk/: README.md  app.py  awsbatch_tool.py  cdk.context.json  run_confirm.py
cloud/batch_cdk/image/: Dockerfile  pyproject.toml  test_image  upload_testjob.py
cloud/bigdev/: Dockerfile  build  test
cloud/clouddev/: Dockerfile
cloud/codespaces/: Dockerfile  install.sh
cloud/devinstance/: gpumachine.tfvars  init_amzn_linux.sh  main.tf  push_image.sh  setup_remotedev.sh  variables.tf
cloud/kms/: app.py
cloud/smalldev/: Dockerfile  build  test
cloud/sops_kms/: README.md  app.py  prod_secrets.enc.env  set_modal_secrets.py  write_secrets.py
cloud/tiny/: Dockerfile  build  environment-minimal.yml
confirm/: __init__.py  setup.py
confirm/adagrid/: __init__.py  adagrid.py  asyncio_runner.py  backend.py  bootstrap.py  calibrate.py  calibration.py  config.py  const.py  convergence.py  coordinate.py  db.py  debug.py  distributed.py  init.py  json.py  modal_backend.py  redis_heartbeat.py  step.py  store.py  summary.py  validate.py  validation.py
confirm/berrylib/: batch_run.py  binomial.py  dirty_bayes.py  fast_inla.py  imprint.py  mcmc.py  util.py
confirm/bound/: binomial.py  normal.py
confirm/cloud/: awsbatch.py  clear_clickhouse_test.py  clear_dbs.py  clear_test_dbs.py  clickhouse.py  coiled.py  coiled_backend.py  e2e_runner.py  modal_backend.py  modal_test_runner.py  modal_util.py  modal_worker.py  redis_heartbeat.py  set_modal_secrets.py
confirm/imprint/: __init__.py  adagrid.py  batching.py  cache.py  db.py  driver.py  grid.py  store.py  summary.py
confirm/lewislib/: batch.py  grid.py  jax_wrappers.py  lewis.py  table.py
confirm/mini_imprint/: __init__.py  adagrid.py  batch.py  binomial.py  db.py  driver.py  grid.py  grid_old.py  lewis_drivers.py  newlib.py  testing.py
confirm/models/: binom1d.py  fisher_exact.py  wd41.py  ztest.py
confirm/outlaw/: __init__.py  berry.py  interp.py  nb_util.py  numpyro_interface.py
confirm/tests/: test_berry.py  test_grid.py  test_holder_odi.py  test_interp.py  test_outlaw.py  test_smalljax.py
docs/: adagrid.md  aws.md  aws_batch.md  ci.md  figures.md  git_subrepo.md  git_subtree.md  gpu_tips.md  jax_patterns.md  packaging.md  profiling.md  secrets.md  standards.md  startup_configuration.md  tests_and_ci.md  uncategorized.md
docs/tutorial/: q-holder-bound.ipynb  q-holder-bound.md  tilt-bound.ipynb  tilt-bound.md
env/: environment-dev.yml  environment.yml  pyproject.toml  requirements-jaxcpu.in  requirements-jaxcpu.txt  requirements-jaxcuda.in  requirements-jaxcuda.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
frontend/src/: App.tsx
imprint/: .gitleaks.toml  .gitrepo  .pre-commit-config.yaml  README.md  WORKSPACE  conftest.py  environment.yml  pyproject.toml  requirements-jax-cuda.txt
imprint/frontend/: package-lock.json  package.json
imprint/imprint/: __init__.py  driver.py  grid.py  log.py  nb_util.py  planar_null.py  testing.py  timer.py
imprint/python/: setup.py
imprint/tests/: test_binomial.py  test_grid.py  test_models.py  test_normal2.py  test_timer.py  test_tutorials.py
imprint/tutorials/: basket.ipynb  basket.md  chisq_test.ipynb  chisq_test.md  t_test_adaptive.ipynb  t_test_adaptive.md  ztest.ipynb  ztest.md
inla_survival/: berry_model.py  generalized.ipynb  inla.py  interpolation.ipynb  smalljax.py  test_numpyro_inla.py  test_smalljax.py  thall2003.ipynb  thall2005.ipynb
inlaw/: setup.py
inlaw/inlaw/: __init__.py  berry.py  berry_model.py  inla.py  numpyro_interface.py  quad.py  smalljax.py
inlaw/tests/: test_conditional_inla.npy  test_inlaw.py  test_quad.py  test_smalljax.py
jax_inv/: jax_inv.ipynb
models/: ztest.ipynb  ztest.md
noteopteryx/: .gitignore  BBTHessians.md  BayesianBasketTrials.md  README.md
noteopteryx/.obsidian/: community-plugins.json  core-plugins.json  daily-notes.json  hotkeys.json  workspaces.json  zk-prefixer.json
outlaw/: setup.py
outlaw/outlaw/: __init__.py  batching.py  berry.py  inla.py  interp.py  nb_util.py  (+1 more)
research/: README.md
research/cloud_explore/modal/debugging/: Dockerfile  jax.py  pyproject.toml
tests/: test_berry.py  test_cache.py  test_checkpoint.py  test_clickhouse.py  test_db.py  test_duckdb.py  test_fast_math.py  test_grid.py  test_holder_odi.py  test_interp.py  test_outlaw.py  test_quad.py  test_store.py  test_wd41.py
tools/: copy_configs.py  gitleaks-report.json
(+536 files in other folders)
