[tool.poetry]
name = "confirm"
version = "0.1.0"
description = ""
authors = [
    "Confirm Solutions <research@confirmsol.org>",
]
packages = [
    { include = "confirm" },
    { include = "imprint", from = "imprint" },
]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.1"
scipy = "^1.10.0"
sympy = "^1.11.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
jax = "0.3.24"
numpyro = "^0.10.1"
jaxlib = [
    { version = "0.3.22", platform = "darwin", source = "pypi" },
    { version = "0.3.24+cuda11.cudnn82", platform = "linux" },
]
duckdb = "^0.6.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pre-commit = "^2.21.0"
pytest-xdist = {extras = ["psutil"], version = "^3.1.0"}
ipython = "^8.8.0"
nbformat = "^5.7.3"

[tool.poetry.group.cloud]
optional = true

[tool.poetry.group.cloud.dependencies]
pyarrow = "^10.0.1"
boto3 = "^1.26.54"
cloudpickle = "~2.0.0"
clickhouse-connect = "^0.5.2"
redis = "^4.4.2"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
line-profiler = "^3.5.1"
jupytext = "^1.14.4"
reorder-python-imports = "^3.9.0"
flake8 = "^5.0.4"
typer = "^0.6.1"
jupyter = "^1.0.0"
rich = "^12.6.0"
ipdb = "^0.13.11"

[tool.poetry.group.cloud_dev]
optional = true

[tool.poetry.group.cloud_dev.dependencies]
aws-cdk-lib = "^2.61.1"
aws-cdk-aws-batch-alpha = "^2.61.1a0"
modal-client = "^0.43.586"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-p imprint.testing -s --tb=short --strict-markers --doctest-modules"
testpaths = [
    "tests",
    "imprint/tests",
    "imprint/imprint",
    "confirm/outlaw",
]

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
